data/derived/comb/progs/unify/prog5180.ml.out
Characters 16-34:
  let _ = List.map((+), [1;2;3;4;4]);;
                  ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
